<resources>
    <string name="app_name">InClass10</string>

    <string name="label_courses">Courses</string>
    <string name="title_grade_screen">Grades</string>
    <string name="label_gpa_0">GPA: 0.0</string>
    <string name="label_hours_0">Hours: 0.0</string>
    <string name="label_gpa_4">GPA: 4.0</string>
    <string name="label_gpa">GPA: </string>
    <string name="label_hours">HOURS: </string>

    <string name="label_error_all_fields">Please Enter all fields</string>
    <string name="label_error_course_name_field">Please Enter course name field</string>
    <string name="label_error_course_hour_field">Please Enter credit hour field</string>
    <string name="label_error_course_number_field">Please Enter course number field</string>
    <string name="label_alert">Alert!!</string>
    <string name="label_ok">Ok</string>
    <string name="label_hint_course_number">Course Number</string>
    <string name="label_hint_course_name">Course Name</string>
    <string name="label_hint_credit_hours">Credit Hours</string>
    <string name="label_submit">Submit</string>
    <string name="label_cancel">Cancel</string>
    <string name="title_add_course">Add Course</string>
    <string name="label_successfull">Successfully inserted data</string>
    <string name="label_credit_hours">Credit Hours</string>

    <string name="label_course_grade">Course Grade</string>
    <string name="label_a">A</string>
    <string name="label_b">B</string>
    <string name="label_c">C</string>
    <string name="label_d">D</string>
    <string name="label_f">F</string>

</resources>