<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourseActivity">

    <EditText
        android:id="@+id/editTextCNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/label_hint_course_number"
        android:inputType="textCapSentences|textCapWords|textCapCharacters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        android:textColor="@color/black"/>


    <EditText
        android:id="@+id/editTextCName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/label_hint_course_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCNumber"
        tools:ignore="TouchTargetSizeCheck"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editTextCreditHours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/label_hint_credit_hours"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCName"
        tools:ignore="TouchTargetSizeCheck"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/light_gray"
        android:text="@string/label_submit"
        android:textAllCaps="false"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:text="@string/label_cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewCGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/label_course_grade"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreditHours"
        android:textColor="@color/black"/>

    <RadioGroup
        android:id="@+id/rgGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textViewCGrade"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreditHours"
        android:layout_marginTop="20dp">



        <RadioButton
            android:id="@+id/radioButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_a"
            app:layout_constraintStart_toEndOf="@+id/textViewCGrade"
            app:layout_constraintTop_toBottomOf="@+id/editTextCreditHours"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/radioButtonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_b"
            app:layout_constraintStart_toEndOf="@+id/textViewCGrade"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonA"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/radioButtonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_c"
            app:layout_constraintStart_toEndOf="@+id/textViewCGrade"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonB"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/radioButtonD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_d"
            app:layout_constraintStart_toEndOf="@+id/textViewCGrade"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonC"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/radioButtonF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_f"
            app:layout_constraintStart_toEndOf="@+id/textViewCGrade"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonD"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>